6650373: Assert in methodOopDesc::make_adapters()

AdapterHandlerLibrary::get_create_adapter_index() returns incorrect value (-2) when CodeCache is full.

Reviewed-by: sgoldman